package be.intecbrussel.model.book;


public class FictionBooks extends Book{
    public FictionBooks(String bookTitle, String bookAuthor, int bookPublishYear, BookStatus status) {
        super(bookTitle, bookAuthor, bookPublishYear, status);
    }
}

